--- a/package.json
+++ b/package.json
@@ -9,12 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.7",
+    "bcrypt": "^5.0.1",
+    "flowbite": "^1.5.2",
+    "flowbite-react": "^0.1.6",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.5.2",
     "next": "12.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.34.0",
+    "react-loadingbar": "^0.0.1",
+    "react-toastify": "^9.0.8",
+    "remixicon": "^2.5.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
-    "eslint-config-next": "12.2.4"
+    "eslint-config-next": "12.2.4",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   }
 }
